[package]
name = "pinch"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
log = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.24", features = [
    "MessageEvent",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceServer",
    "RtcIceTransportPolicy",
    "RtcOfferOptions",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit", 
    "RtcSdpType",
    "RtcSignalingState"
] }


[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
datachannel = { git = "https://github.com/DouglasDwyer/datachannel-rs", features = [ "static" ] }
webrtc-sdp = "0.3.9"